--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,9 @@
 #root{
   background-color: #f2f2f2;
 }
-.app-wrapper-content{
-  grid-area: cont;
-  background-color: #fff;
-  padding: 10px;
-  margin: 10px 5px;
+.page{
+  background: #ffffff;
 }
-.app-wrapper{
-  width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-areas: 
-  "header header"
-  "nav cont ";
-
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  /* grid-gap: 10px; */
+.header{
+  background-color: #343a40;
 }
