--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -2,6 +2,10 @@
     height: 200px;
     overflow: hidden;
 }
+.avatar img{
+    width: 200px;
+    margin-left: 14%;
+}
 .pagination{
     justify-content: center;
 }
