follow-unfollow api

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,11 +1,11 @@
-.avatar{
-    height: 200px;
-    overflow: hidden;
-}
-.avatar img{
-    width: 200px;
-    margin-left: 14%;
-}
-.pagination{
-    justify-content: center;
-}
+/*.avatar{*/
+/*    height: 200px;*/
+/*    overflow: hidden;*/
+/*}*/
+/*.avatar img{*/
+/*    width: 200px;*/
+/*    margin-left: 14%;*/
+/*}*/
+/*.pagination{*/
+/*    justify-content: center;*/
+/*}*/
